--- a/src/containers/Game.css
+++ b/src/containers/Game.css
@@ -1,5 +1,5 @@
 .snake-container {
-  width: 100vw;
+  /* width: 100vw; */
   /* height: 100vh; */
   display: flex;
   align-items: center;
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  border: 1px solid black !important;
+  border: 2px solid black !important;
 }
 
 .gridItem {
